# bank-statement-parser

./: pyproject.toml
src/bank_statement_parser/: __init__.py
src/bank_statement_parser/banks/: generic.py  sainsburys.py
